@startuml

title __SECURITY's Class Diagram__\n

  namespace com.woonders.lacemsjsf.config {
    namespace security {
      class com.woonders.lacemsjsf.config.security.CustomAuthenticationFailureHandler {
          {static} - logger : Logger
          + onAuthenticationFailure()
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.config {
    namespace security {
      class com.woonders.lacemsjsf.config.security.CustomAuthenticationSuccessHandler {
          {static} - log : Logger
          - redirectStrategy : RedirectStrategy
          + onAuthenticationSuccess()
      }
    }
  }
  

  com.woonders.lacemsjsf.config.security.CustomAuthenticationFailureHandler .up.|> org.springframework.security.web.authentication.AuthenticationFailureHandler
  com.woonders.lacemsjsf.config.security.CustomAuthenticationFailureHandler o-- com.woonders.lacemscommon.service.impl.LoginAttemptServiceImpl : loginAttemptService
  com.woonders.lacemsjsf.config.security.CustomAuthenticationFailureHandler o-- com.woonders.lacemscommon.network.NetworkUtil : networkUtil
  com.woonders.lacemsjsf.config.security.CustomAuthenticationFailureHandler o-- com.woonders.lacemsjsf.config.PropertiesUtil : propertiesUtil
  com.woonders.lacemsjsf.config.security.CustomAuthenticationSuccessHandler .up.|> org.springframework.security.web.authentication.AuthenticationSuccessHandler
  com.woonders.lacemsjsf.config.security.CustomAuthenticationSuccessHandler o-- com.woonders.lacemscommon.service.AccessLogService : accessLogService
  com.woonders.lacemsjsf.config.security.CustomAuthenticationSuccessHandler o-- com.woonders.lacemscommon.service.impl.LoginAttemptServiceImpl : loginAttemptService
  com.woonders.lacemsjsf.config.security.CustomAuthenticationSuccessHandler o-- com.woonders.lacemscommon.network.NetworkUtil : networkUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
